...
}

@Composable
@Preview
fun ConversationCommentRowItemPreview() {
    ConversationCommentRowItem(
        ConversationComment("Minta User",
        "Minta üzenet"
        , "2021-01-01 15:22")
    )
}

@Composable
...
